# smol-game-engine-tutorial

./: .gitignore  README.md
docs/: GameLoop.md
live-1/: readme.md
live-1/smol/: run.bat
live-1/smol/assets/: default.fs  default.vs
live-1/smol/src/: CMakeLists.txt  smol_assetmanager.cpp  smol_gl.cpp  smol_launcher.cpp  smol_log.cpp  smol_mat4.cpp  smol_renderer_gl.cpp  smol_vector3.cpp
live-1/smol/src/demo/: game.cpp
live-1/smol/src/include/smol/: smol.h  smol_assetmanager.h  smol_engine.h  smol_game.h  smol_gl.h  smol_log.h  smol_platform.h  smol_renderer.h
live-1/smol/src/launcher/: CMakeLists.txt  smol_launcher.cpp  smol_launcher_resource_win64.rc
live-1/smol/src/win64/: smol_platform_win64.cpp
video-10/: readme.md
video-10/smol/src/: CMakeLists.txt
video-10/smol/src/include/smol/: smol.h
video-10/smol/src/win64/: smol_resource_win64.h
video-11/: readme.md
video-11/smol/src/: smol_keyboard.cpp  smol_launcher.cpp  smol_mat4.cpp  smol_vector2.cpp
video-11/smol/src/demo/: game.cpp
video-11/smol/src/include/smol/: smol_mat4.h  smol_vector2.h
video-12/: readme.md
video-12/smol/src/: smol_launcher.cpp  smol_mat4.cpp
video-12/smol/src/include/smol/: smol_vector3.h
video-13/: readme.md
video-13/smol/src/: CMakeLists.txt  smol_launcher.cpp
video-13/smol/src/include/smol/: smol.h  smol_keyboard.h  smol_mat4.h  smol_platform.h
video-13/smol/src/win64/: smol_platform_win64.cpp
video-14/: readme.md
video-14/smol/src/: CMakeLists.txt  smol_assetmanager.cpp  smol_launcher.cpp
video-14/smol/src/include/smol/: smol_platform.h
video-14/smol/src/win64/: smol_platform_win64.cpp
video-2/: readme.md
video-2/smol/: CMakeLists.txt  build.bat
video-2/smol/src/: smol_launcher.cpp
video-2/smol/src/include/smol/: smol_engine.h  smol_platform.h
video-2/smol/src/win64/: smol_platform_win64.cpp
video-3/: readme.md
video-3/smol/src/: CMakeLists.txt  smol_launcher.cpp
video-3/smol/src/include/smol/: smol_platform.h
video-3/smol/src/win64/: smol_platform_win64.cpp
video-4/: readme.md
video-4/smol/: build.bat
video-4/smol/src/: CMakeLists.txt  smol_launcher.cpp
video-4/smol/src/include/smol/: smol.h  smol_platform.h
video-4/smol/src/win64/: smol_platform_win64.cpp
video-5/: readme.md
video-5/smol/src/: CMakeLists.txt  smol_launcher.cpp
video-5/smol/src/include/smol/: smol.h  smol_gl.h  smol_version.h
video-5/smol/src/win64/: smol_platform_win64.cpp
video-6/: readme.md
video-6/smol/src/: CMakeLists.txt  smol_engine.cpp  smol_launcher.cpp
video-6/smol/src/include/smol/: smol_gl.h  smol_version.h.in
video-6/smol/src/win64/: smol_platform_win64.cpp
video-7/: readme.md
video-7/smol/src/: CMakeLists.txt  smol_launcher.cpp
video-7/smol/src/win64/: smol_platform_win64.cpp
video-8/: readme.md
video-8/smol/: run.bat
video-8/smol/src/: CMakeLists.txt  smol_launcher.cpp
video-8/smol/src/demo/: game.cpp
video-8/smol/src/win64/: smol_platform_win64.cpp
video-9/: readme.md
video-9/smol/src/: CMakeLists.txt  smol_launcher.cpp
(+6 files in other folders)
